# VisAO

./: docker-compose.yaml
.github/workflows/: lint-backend.yaml  lint-frontend.yaml  protobuf-check.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile-dev  LICENSE.txt  README.md  generate_proto.sh  pyproject.toml
backend/visao_backend/: db.py  main.py
backend/visao_backend/grpc/: __init__.py  main_pb2.py  main_pb2_grpc.py
backend/visao_backend/models/: __init__.py  base_model.py  file.py
backend/visao_backend/visao_grpc/: main_pb2.py  main_pb2_grpc.py
frontend/: .eslintrc.cjs  .eslintrc.json  .prettierignore  Dockerfile-dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx
frontend/src/app/: page.tsx
frontend/src/lib/: context.ts
frontend/src/routes/: __root.tsx  index.lazy.tsx
grpc/: main.proto
