[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "VisAO-Backend"
version = "0.0.1"
description = "VisAO backend"
authors = ["VisAO <example@example.com>"]
readme = "README.md"
packages = [{ include = "src/visao_backend" }]
license = "MIT"
repository = "https://github.com/LuisDuarte1/visao_backend"
classifiers = ["Programming Language :: Python :: 3 :: Only"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
visao_backend = "visao_backend.main:main"

[tool.poetry.group.dev.dependencies]
boto3-stubs = { extras = ["lambda", "s3"], version = "*" }
ipdb = "*"
ipython = "*"
jupyterlab = "*"
mypy = "*"
mypy-boto3-lambda = "*"
mypy-boto3-s3 = "*"
pandas-stubs = "*"
pdbpp = "*"
pip = "*"
pre-commit = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
ruff = "*"
typed-argument-parser = "*"
types-pillow = "*"
types-tqdm = "*"
wheel = "*"
aotpy = "*"
grpcio_tools = "*"

[tool.pytest.ini_options]
addopts = "tests --cov=visao_backend/ --cov-report=term-missing:skip-covered --cov-report=xml --dist=loadgroup -n 8 --durations=5"

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["visao_backend/grpc/*.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["UP", "RUF", "I", "D", "E501"]
ignore = ["UP036"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]

[tool.mypy]
strict = true
disable_error_code = ["type-arg"]
exclude = [
    "^visao_backend/grpc/.*$"
]

# NOTE: uncomment these lines and edit accordingly if you have modules still without typings
# [[tool.mypy.overrides]]
# module = ["sklearn.*",]
# ignore_missing_imports = true
