[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "VisAO-Backend"
version = "0.0.1"
description = "VisAO backend"
authors = ["VisAO <example@example.com>"]
readme = "README.md"
packages = [{ include = "visao_backend" }]
license = "MIT"
repository = "https://github.com/LuisDuarte1/visao_backend"
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.11"
aotpy = "^1.0.0"
sonora="^0.2.3"
flask = "^3.0.2"
types-protobuf = "^4.24.0.20240311"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.scripts]
visao_backend = "visao_backend.main:main"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
ipython = "*"
pdbpp = "*"
pip = "*"
pre-commit = "*"
ruff = "*"
typed-argument-parser = "*"
types-pillow = "*"
types-tqdm = "*"
wheel = "*"
grpcio_tools = "*"
protoletariat = "*"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["visao_backend/visao_grpc/*.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["UP", "RUF", "I", "E", "B", "SIM"]
ignore = ["UP036", "E117", "E111", "E114"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]